--- a/src/f1-main/App.module.css
+++ b/src/f1-main/App.module.css
@@ -2,6 +2,7 @@
     width: 70%;
     margin: 0 auto;
     display: flex;
+    min-height: 100vh;
 }
 .contentContainer{
     width: 80%;
@@ -9,7 +10,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 35px;
+    padding: 35px 0;
+    min-height: 100vh;
 }
 .routeContainer{
     margin-top: 30px;
