--- a/src/f2-features/f3-popupsPage/PopupsPage.module.css
+++ b/src/f2-features/f3-popupsPage/PopupsPage.module.css
@@ -1,6 +1,12 @@
 .mainContainer{
     width: 100%;
 }
+.title{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
 .contentContainer{
     width: 100%;
 }
@@ -15,21 +21,23 @@
     justify-content: center;
     align-items: center;
 }
-.popupDescription{
+
+.popupDescription {
     text-align: center;
+    word-break: break-word;
 }
 .popupDouble{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.titleContainer{
+.titlePopupsContainer{
     width: 100%;
     margin: 20px 0;
     display: flex;
     align-items: center;
 }
-.titleContainer div{
+.titlePopupsContainer div{
     width: 20%;
     display: flex;
     justify-content: center;
