--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
     background: #E5E5E5;
+    font-size: 16px;
 }
